@@ -1,3 +1,9 @@
+2005-02-26  Christian Stimming  <stimming@tuhh.de>
+
+	* src/import-export/hbci/gnc-hbci-kvp.c (force_account_dirty):
+	Force account 'dirty' after modifying the kvp_frame. Hopefully
+	fixes #165096.
+
 2005-02-21  Christian Stimming  <stimming@tuhh.de>
 
 	* src/import-export/import-backend.c, import-backend.h,
